@@ -5,7 +5,6 @@
 		<menuitem action="entry-edit" />
 		<menuitem action="entry-remove" />
 		<menuitem action="entry-launch" />
-		<separator />
 		<menuitem action="entry-add" />
 		<separator />
 		<menuitem action="clip-cut" />
