@@ -3,6 +3,7 @@ xxxx-xx-xx: Revelation 0.4.0
 
 New features:
 - port to gtk+ 2.4 (new file dialog, combobox etc)
+- file handling uses GNOME VFS (can open files over http, ftp etc)
 - use icons from the GNOME icon theme
 - improved widgets when editing entries (dropdowns, fileselectors etc)
 - the account password is copied to the clipboard when launched
